crates/compiler/test_syntax/tests/snapshots/fail/suffixed_same_ident.expr.roc
Stdout.line! 
"Not the same ident, shouldn't parse as an single expr"